src/test/ui/const-generics/issues/issue-79674.stderr
error[E0308]: mismatched types
  --> $DIR/issue-79674.rs:26:5
   |
LL |     requires_distinct("str", 12);
   |     ^^^^^^^^^^^^^^^^^ expected `true`, found `false`
   |
   = note: expected type `true`
              found type `false`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
